Added the page and size parameters for default page 1 and size 25